# mesontest

./: .python-version  README.md  meson.build  pyproject.toml
meson_test/: meson.build
subprojects/: .gitignore  gmp.wrap
subprojects/packagefiles/gmp-6.2.1/: meson.build
